Arreglos en editar producto y estadisticas
